--- a/src/main/resources/templates/admin/item.html
+++ b/src/main/resources/templates/admin/item.html
@@ -9,31 +9,40 @@
 
 <body>
 	<header th:replace="header"></header>
-	<main>
-		<h1>出品申請詳細画面</h1>
-		<span class="title" th:text="${textbook.title}"></span>
-		<table border="1">
-			<tr>
-				<td>出品者</td>
-				<td th:text="${user.studentNumber}"></td>
-			</tr>
-			<tr>
-				<td>状態</td>
-				<td th:if="${item.itemStatus == 1}">新品</td>
-				<td th:if="${item.itemStatus == 2}">中古</td>
-				<td th:if="${item.itemStatus == 3}">書き込みあり</td>
-				<td th:if="${item.itemStatus == 4}">破損あり</td>
-			</tr>
-		</table>
-		<br>
-		<form th:action="'/admin/request/' + ${item.id}" method="post" style="display: inline;">
-			<input type="hidden" name="status" value="3">
-			<button class="itemStatus" >許可</button>
-		</form>
-		<form th:action="'/admin/request/' + ${item.id}" method="post" style="display: inline;">
-			<input type="hidden" name="status" value="2">
-			<button class="itemStatus" >不許可</button>
-		</form>
+	<main class="deteil">
+		<div class="container">
+			<div class="boxImage">
+				<block th:each="image:${images}">
+				<img th:src="'/img/'+${image.imagePath}" th:alt="'/img/'+${image.imagePath}" /><br>
+				</block>
+			</div>
+			<div class="boxText">
+				<h1>出品申請詳細画面</h1>
+				<span class="title" th:text="${textbook.title}"></span>
+				<table border="1">
+					<tr>
+						<td>出品者</td>
+						<td th:text="${user.studentNumber}"></td>
+					</tr>
+					<tr>
+						<td>状態</td>
+						<td th:if="${item.itemStatus == 1}">新品</td>
+						<td th:if="${item.itemStatus == 2}">中古</td>
+						<td th:if="${item.itemStatus == 3}">書き込みあり</td>
+						<td th:if="${item.itemStatus == 4}">破損あり</td>
+					</tr>
+				</table>
+				<br>
+				<form th:action="'/admin/request/' + ${item.id}" method="post" style="display: inline;">
+					<input type="hidden" name="status" value="3">
+					<button class="itemStatus">許可</button>
+				</form>
+				<form th:action="'/admin/request/' + ${item.id}" method="post" style="display: inline;">
+					<input type="hidden" name="status" value="2">
+					<button class="itemStatus">不許可</button>
+				</form>
+			</div>
+		</div>
 	</main>
 	<footer th:replace="footer"></footer>
 </body>
