footerの表示の修正

--- a/src/main/resources/static/css/bbsTable.css
+++ b/src/main/resources/static/css/bbsTable.css
@@ -54,4 +54,10 @@ textArea {
 .title{
 	text-align: center;
 }
-	
+
+.wrapper{
+	min-height: 81.7vh;
+	position: relative;
+	padding-bottom: 80px;
+	box-sizing: border-box;
+}	
