footerの位置の可変

--- a/src/main/resources/templates/bbsTable.html
+++ b/src/main/resources/templates/bbsTable.html
@@ -10,7 +10,7 @@
 <body>
 	<header th:replace="header"></header>
 	
-	<div class="wrapper">
+	<main>
 
 	<h1 class ="title">掲示板</h1>
 	<table>
@@ -37,9 +37,7 @@
 	<button class = "req">新規募集</button>
 	</form>
 	<footer th:replace="footer"></footer>
-	</div>
-	<br><br><br>
-</form>
-<footer th:replace="footer"></footer>
+	</main>
+
 </body>
 </html>
