--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -134,3 +134,10 @@ td {
 .detail {
 	padding-top: 30px;
 }
+
+main{
+	min-height: 81.7vh;
+	position: relative;
+	padding-bottom: 80px;
+	box-sizing: border-box;
+}	
