--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -10,17 +10,67 @@
 
 <body>
 	<header th:replace="header"></header>
+
+	<!--商品画像表示-->
 	<ul class="slider">
 		<th:block th:each="itemImage:${itemImages}">
 			<li><img th:src="'/img/'+${itemImage.imagePath}"></li>
 		</th:block>
 	</ul>
+
+	<!--商品(教科書名表示)-->
 	<h3 th:text="${textbook.title}" style="text-align: center;"></h3>
+
+	<!--価格表示-->
+	<th:block th:if="${item.itemStatus == 1}">
+		<p id="" th:text="${#numbers.formatDecimal(item.textprice*0.8,0,'COMMA',0,'POINT')}+'円'"
+			style="text-align: center; font-size: 1.2em;"></p>
+	</th:block>
+
+	<th:block th:if="${item.itemStatus == 2}">
+		<p th:text="${#numbers.formatDecimal(item.textprice*0.8,0,'COMMA',0,'POINT')}+'円'"
+			style="text-align: center; font-size: 1.2em;"></p>
+	</th:block>
+
+	<th:block th:if="${item.itemStatus == 3}">
+		<p th:text="${#numbers.formatDecimal(item.textprice*0.8,0,'COMMA',0,'POINT')}+'円'"
+			style="text-align: center; font-size: 1.2em;"></p>
+	</th:block>
+
+	<th:block th:if="${item.itemStatus == 4}">
+		<p th:text="${#numbers.formatDecimal(item.textprice*0.8,0,'COMMA',0,'POINT')}+'円'"
+			style="text-align: center; font-size: 1.2em;"></p>
+	</th:block>
+	
+	<!--商品状態表示-->
+	<th:block th:if="${item.itemStatus == 1}">
+		<p style="text-align: center; font-size: 1.2em;">商品状態: 新品</p>
+	</th:block>
+
+	<th:block th:if="${item.itemStatus == 2}">
+		<p style="text-align: center; font-size: 1.2em;">商品状態: 中古</p>
+	</th:block>
+
+	<th:block th:if="${item.itemStatus == 3}">
+		<p style="text-align: center; font-size: 1.2em;">商品状態: 書き込みあり</p>
+	</th:block>
+
+	<th:block th:if="${item.itemStatus == 4}">
+		<p style="text-align: center; font-size: 1.2em;">商品状態: 破損あり</p>
+	</th:block>
+	
+	<!--出品者情報-->
+	<p style="font-size: 1.2em; padding-left: 40%;">出品者</p>
+	<a th:href="@{/user/{id}(id=${item.sellerId})}" style="font-size: 1.2em; padding-left: 40%;">[[${user.studentNumber}]]</a>
+	<form th:action="@{/buy/{id}(id=${item.id})}" method="post">
+		<button style="position: relative; left: 60%; bottom: 30px;">購入する</button>
+	</form>
 	<footer th:replace="footer"></footer>
+
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<script src="/js/item.js"></script>
+	<script src="/js/item.js"></script>
 </body>
 
 </html>
