--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -61,7 +61,7 @@
 	
 	<!--出品者情報-->
 	<p style="font-size: 1.2em; padding-left: 40%;">出品者</p>
-	<a th:href="@{/user/{id}(id=${item.sellerId})}" style="font-size: 1.2em; padding-left: 40%;">[[${user.studentNumber}]]</a>
+	<a th:href="@{/user/{id}(id=${item.sellerId})}" style="font-size: 1.2em; padding-left: 40%;">[[${student.name}]]</a>
 	<form th:action="@{/buy/{id}(id=${item.id})}" method="post">
 		<button style="position: relative; left: 60%; bottom: 30px;">購入する</button>
 	</form>
