--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -5,12 +5,13 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>商品追加申請</title>
+
 <style>
             .img > img{
                 width: 200px;
             }
         </style>
-        <link rel="stylesheet" type="text/css" href="/css/login.css"/>
+        <link rel="stylesheet" type="text/css" href="/css/addItem.css"/>
 </head>
 <body>
 <header th:replace="header"></header>
@@ -18,7 +19,8 @@
          accept属性により、ファイル選択ダイアログで画像ファイルのみが表示されます。
          multiple属性により、ユーザーが複数のファイルを選択できます。
          onchange属性により、選択したファイルが変更されるたびに指定したJavaScript関数が呼び出されます。 -->
-           <form action="/item/add" method="post" enctype="multipart/form-data">
+	<h1>出品申請</h1>
+	<form action="/item/add" method="post" enctype="multipart/form-data">
           <div class="img"></div>
     <input type="file" id="fileElem" accept='image/*' multiple="multiple" onchange="preview(this);" name="images" style="display: none;">
     <button id="fileSelect" type="button">画像を選択</button>
@@ -37,5 +39,6 @@
     <button>出品申請</button>
 </form>
     <script src="/js/addItem.js"></script>
+    <footer th:replace="footer"></footer>
 </body>
 </html>
