--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -23,3 +23,10 @@ table {
 	width: fit-content;
 	margin: 0 auto;
 }
+
+main{
+	min-height: 85vh;
+	position: relative;
+	padding-bottom: 80px;
+	box-sizing: border-box;
+}
