レビューへのジャンプ用ボタン追加、販売したモノのリストを追加

--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -1,6 +1,10 @@
 @charset "UTF-8";
 main{
 	text-align: center;
+	min-height: 81.7vh;
+	position: relative;
+	padding-bottom: 80px;
+	box-sizing: border-box;
 }
 #table{
 	margin-right:auto;
