--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -38,7 +38,7 @@
 		<!--	注文履歴を書くテーブル-->
 		<table class="table" border="1">
 			<tr>
-				<th colspan="2" class="tabletitle">注文履歴</th>
+				<th colspan="3" class="tabletitle">注文履歴</th>
 			</tr>
 			<!--		buyListで繰り返し-->
 			<buylistloop th:each="buyItem:${buyList}">
@@ -53,14 +53,46 @@
 							<img th:src="'/img/' + ${img.imagePath}" th:alt="'/img/'+${img.imagePath}" />
 						</td>
 					</imageloop>
+					<td th:if="${buyItem.buyerId == @account.id && buyItem.dealStatus == 4}">
+						<form th:action="@{/deal/{id}(id=${buyItem.id})}" method="get">
+							<button class="btn">レビュー画面へ</button>
+						</form>
+					</td>
+				</tr>
+			</buylistloop>
+			
+		</table>
+		<table class="table" border="1">
+			<tr>
+				<th colspan="3" class="tabletitle">販売履歴</th>
+			</tr>
+<!--					buyListで繰り返し-->
+			<buylistloop th:each="sellItem:${sellList}">
+				<tr>
+					<textloop th:each="text:${textbookList}">
+						<td th:if="${sellItem.textbookId} eq ${text.id}">
+							<div th:text="${text.title}"></div>
+						</td>
+					</textloop>
+					<imageloop th:each="img2:${imgList2}">
+						<td th:if="${img2.itemId == sellItem.id}">
+							<img th:src="'/img/' + ${img2.imagePath}" th:alt="'/img/'+${img2.imagePath}" />
+						</td>
+					</imageloop>
+					<td th:if="${sellItem.sellerId == @account.id && sellItem.dealStatus == 4}">
+						<form th:action="@{/deal/{id}(id=${sellItem.id})}" method="get">
+							<button class="btn">取引画面へ</button>
+						</form>
+					</td>
 				</tr>
 			</buylistloop>
 		</table>
 		<br>
 		<br>
 		<br>
+		<footer th:replace="footer"></footer>
 	</main>
-	<footer th:replace="footer"></footer>
+
 </body>
 
 </html>
