--- a/src/main/resources/static/css/addItem.css
+++ b/src/main/resources/static/css/addItem.css
@@ -4,3 +4,46 @@ body{
 	text-align: center;
 }
 
+#fileSelect{
+	width: 100px;/*横幅*/
+	padding: 5px;/*内側余白*/
+	background-color: rgb(138, 138, 138);/*背景色*/
+	color: rgb(255, 255, 255);/*文字の色*/
+	border: none;
+	border-radius: 4px;/*角の丸み*/
+	cursor: pointer;
+	margin: 10px;
+}
+
+#fileSelect:hover{
+	background-color: rgb(192, 192, 192);
+	color: black;
+}
+
+select{
+	width: 400px;
+	height: 30px;
+	margin: 10px;
+}
+
+.addItembutton{
+	width: 150px;/*横幅*/
+	padding: 5px;/*内側余白*/
+	background-color:rgb(128, 128, 192);/*背景色*/
+	color: rgb(0, 0, 0);/*文字の色*/
+	border: none;
+	border-radius: 4px;/*角の丸み*/
+	cursor: pointer;
+	margin: 10px;
+}
+
+.addItembutton:hover{
+	background-color: rgb(128, 128, 255);
+}
+
+main{
+	min-height: 85vh;
+	position: relative;
+	padding-bottom: 80px;
+	box-sizing: border-box;
+}	
