--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -35,14 +35,15 @@
 		</table>
 		<br>
 		<br>
+		<tablemarge>
 		<!--	注文履歴を書くテーブル-->
-		<table class="table" border="1">
+		<table class="table" border="1" id="table1">
 			<tr>
-				<th colspan="3" class="tabletitle">注文履歴</th>
+				<th colspan="3" class="tabletitle" id="tabletitle1">注文履歴</th>
 			</tr>
 			<!--		buyListで繰り返し-->
 			<buylistloop th:each="buyItem:${buyList}">
-				<tr>
+				<tr class="itemlist">
 					<textloop th:each="text:${textbookList}">
 						<td th:if="${buyItem.textbookId} eq ${text.id}">
 							<div th:text="${text.title}"></div>
@@ -62,13 +63,13 @@
 			</buylistloop>
 			
 		</table>
-		<table class="table" border="1">
+		<table class="table" border="1" id="table2">
 			<tr>
-				<th colspan="3" class="tabletitle">販売履歴</th>
+				<th colspan="3" class="tabletitle" id="tabletitle2">販売履歴</th>
 			</tr>
 <!--					buyListで繰り返し-->
 			<buylistloop th:each="sellItem:${sellList}">
-				<tr>
+				<tr class="itemlist">
 					<textloop th:each="text:${textbookList}">
 						<td th:if="${sellItem.textbookId} eq ${text.id}">
 							<div th:text="${text.title}"></div>
@@ -87,6 +88,7 @@
 				</tr>
 			</buylistloop>
 		</table>
+		</tablemarge>
 		<br>
 		<br>
 		<br>
