新規募集画面の修正

--- a/src/main/resources/templates/addRequest.html
+++ b/src/main/resources/templates/addRequest.html
@@ -37,7 +37,7 @@
 		</tr>
 	</table>
 	<br>
-	<button>投稿</button>
+	<button class = "btn">投稿</button>
 	</form>
 <footer th:replace="footer"></footer>
 </main>
