--- a/src/main/resources/templates/complete.html
+++ b/src/main/resources/templates/complete.html
@@ -6,6 +6,7 @@
 <title>取引完了</title>
 </head>
 <body>
+	<header th:replace="header"></header>
 <h1 style="text-align: center;">取引が完了しました</h1>
 <form action="/home" method="get">
 <button type="submit">OK</button>
