通知画面のfooterの修正

--- a/src/main/resources/static/css/notice.css
+++ b/src/main/resources/static/css/notice.css
@@ -23,3 +23,10 @@ th {
 	height: 50px;
 	font-size: 25px;
 }
+
+main{
+	min-height: 85vh;
+	position: relative;
+	padding-bottom: 80px;
+	box-sizing: border-box;
+}
