--- a/src/main/resources/templates/notification.html
+++ b/src/main/resources/templates/notification.html
@@ -5,11 +5,12 @@
 	<meta charset="UTF-8">
 	<title>通知</title>
 	<link rel="stylesheet" type="text/css" href="/css/notice.css">
-	<link rel="stylesheet" type="text/css" href="/css/headerFooter.css">
+<!--	<link rel="stylesheet" type="text/css" href="/css/headerFooter.css">-->
 </head>
 
 <body>
 	<header th:replace="header"></header>
+	<main>
 	<div id="noticeTable">
 		<h1>通知</h1>
 
@@ -23,6 +24,7 @@
 		</table>
 	</div>
 	<footer th:replace="footer"></footer>
+	</main>
 </body>
 
 </html>
