--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -10,6 +10,7 @@
 
 <body>
 	<header th:replace="header"></header>
+	<main>
 <br>
 	<!--商品画像表示-->
 	<ul class="slider">
@@ -66,6 +67,7 @@
 		<button style="position: relative; left: 60%; bottom: 30px;">購入する</button>
 	</form>
 	<footer th:replace="footer"></footer>
+	</main>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
