--- a/src/main/resources/static/css/contactForm.css
+++ b/src/main/resources/static/css/contactForm.css
@@ -24,4 +24,10 @@ button:hover {
 	width: 500px;
 	height: 250px;
 }
-	
+
+main{
+	min-height: 85vh;
+	position: relative;
+	padding-bottom: 80px;
+	box-sizing: border-box;
+}
