--- a/src/main/resources/templates/complete.html
+++ b/src/main/resources/templates/complete.html
@@ -8,7 +8,7 @@
 <body>
 	<header th:replace="header"></header>
 	<main>
-		<h1 style="text-align: center;">取引が完了しました</h1>
+		<h1 class="dealcomplete">取引が完了しました</h1>
 			<form action="/home" method="get">
 				<button type="submit">OK</button>
 			</form>
