出品申請の画面の修正

--- a/src/main/resources/static/css/addItem.css
+++ b/src/main/resources/static/css/addItem.css
@@ -20,11 +20,11 @@ body{
 	color: black;
 }
 
-select{
-	width: 400px;
-	height: 30px;
-	margin: 10px;
-}
+/*select{*/
+/*	width: 400px;*/
+/*	height: 30px;*/
+/*	margin: 10px;*/
+/*}*/
 
 .addItembutton{
 	width: 150px;/*横幅*/
@@ -46,4 +46,59 @@ main{
 	position: relative;
 	padding-bottom: 80px;
 	box-sizing: border-box;
-}	
+}
+
+/*教科書のセレクトボックス*/
+.selectbox-2 {
+    position: relative;
+}
+
+.selectbox-2::before,
+.selectbox-2::after {
+    position: absolute;
+    content: '';
+    pointer-events: none;
+}
+
+.selectbox-2::before {
+    right: 0;
+    display: inline-block;
+    width: 1.8em;
+    height: 1.8em;
+    border-radius: 0 3px 3px 0;
+    background-color: #000000;
+    content: '';
+    margin: 10px;
+}
+
+.selectbox-2::after {
+    position: absolute;
+    top: 30%;
+    right: 1.2em;
+    transform: translate(50%, -50%) rotate(45deg);
+    width: 6px;
+    height: 6px;
+    border-bottom: 3px solid #fff;
+    border-right: 3px solid #fff;
+    content: '';
+    margin: 5px;
+}
+
+.selectbox-2 select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    min-width: 400px;
+    height: 2em;
+    padding: .4em 3.6em .4em .8em;
+    border: 1px solid #000000;
+    border-radius: 3px;
+    color: #333333;
+    font-size: 0.9em;
+    cursor: pointer;
+    margin: 10px;
+}
+
+.selectbox-2 select:focus {
+    outline: 1px solid #000000;
+}
