--- a/src/main/resources/templates/setPassword.html
+++ b/src/main/resources/templates/setPassword.html
@@ -33,7 +33,7 @@
 					<input type="text" name="reNewPassword">
 				</textbox>
 				<br>
-				<button>変更</button>
+				<button class="btn">変更</button>
 			</form>
 			</td>
 		</tr>
