ボタンの修正

--- a/src/main/resources/static/css/complete.css
+++ b/src/main/resources/static/css/complete.css
@@ -19,6 +19,7 @@ button[type="submit"]{
 	border-radius: 10px;
 	margin: auto;
 	border: none;
+	cursor: pointer;
 }
 
 button[type="submit"]:hover{
