--- a/src/main/resources/static/css/addItem.css
+++ b/src/main/resources/static/css/addItem.css
@@ -47,3 +47,15 @@ main{
 	padding-bottom: 80px;
 	box-sizing: border-box;
 }	
+
+.container {
+	display:flex;
+	overflow: hidden;
+	width: fit-content;
+	margin: 0 auto;
+}
+
+.box {
+	float:left;
+	width: fit-content
+}
