--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -1,54 +1,62 @@
 <!DOCTYPE html>
-<html　xmlns:th="http://www.thymeleaf.org">
+<html　xmlns:th="http: //www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="/css/addItem.css"/>
-<title>商品追加申請</title>
-<style>
-            .img > img{
-                width: 200px;
-            }
-</style>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="/css/addItem.css" />
+	<title>商品追加申請</title>
+	<style>
+		.img>img {
+			width: 200px;
+		}
+	</style>
 </head>
+
 <body>
 	<header th:replace="header"></header>
-  <!-- 画像ファイルを選択するための入力要素を設定します。
+	<!-- 画像ファイルを選択するための入力要素を設定します。
          accept属性により、ファイル選択ダイアログで画像ファイルのみが表示されます。
          multiple属性により、ユーザーが複数のファイルを選択できます。
          onchange属性により、選択したファイルが変更されるたびに指定したJavaScript関数が呼び出されます。 -->
 	<main>
-	<h1>出品申請</h1>
-	
-	<form action="/item/add" method="post" enctype="multipart/form-data">
-		<div class="img"></div>
-		
-	<input type="file" id="fileElem" accept='image/*' multiple="multiple" onchange="preview(this);" name="images" style="display: none;">
-	
-	<button id="fileSelect" type="button">画像を選択</button>
-	
-	<br>
-	
-	<select name="textbookId">
-		<option th:each="textbook:${TextbookMap}"th:value="${textbook.value}" th:text="${textbook.key}"></option>
-		</select>
-	
-	<br>
-	
-	<select name="itemStatus">
-		<option th:each="item:${ItemStatusMap}"th:value="${item.value}" th:text="${item.key}"></option>
-		</select>
-		
-    <!-- 選択した画像のプレビューを表示するためのdiv要素を設定します。 -->
-	<br>
-	
-	<button class="addItembutton">出品申請</button>
-	</form>
-	
-	<script src="/js/addItem.js"></script>
-	
-	<footer th:replace="footer"></footer>
+		<h1>出品申請</h1>
+
+		<form action="/item/add" method="post" enctype="multipart/form-data">
+			<div class="container">
+				<div class="box">
+					<div class="img"><span class="sampleImage"></span></div>
+
+					<input type="file" id="fileElem" multiple accept='image/*' onchange="preview(this);" name="images"
+						style="display: none;">
+
+					<button id="fileSelect" type="button">画像を選択</button>
+				</div>
+			</div>
+			<br>
+
+			<select name="textbookId">
+				<option th:each="textbook:${TextbookMap}" th:value="${textbook.value}" th:text="${textbook.key}">
+				</option>
+			</select>
+
+			<br>
+
+			<select name="itemStatus">
+				<option th:each="item:${ItemStatusMap}" th:value="${item.value}" th:text="${item.key}"></option>
+			</select>
+
+			<!-- 選択した画像のプレビューを表示するためのdiv要素を設定します。 -->
+			<br>
+
+			<button class="addItembutton">出品申請</button>
+		</form>
+
+		<script src="/js/addItem.js"></script>
+
+		<footer th:replace="footer"></footer>
 	</main>
 </body>
+
 </html>
