--- a/src/main/resources/templates/admin/addTextbook.html
+++ b/src/main/resources/templates/admin/addTextbook.html
@@ -32,7 +32,7 @@
 					<td><input type="text" name="publisher" th:value="${publisher}"></td>
 				</tr>
 			</table>
-			<button>登録</button>
+			<button class="itemStatus">登録</button>
 		</form>
 		<footer th:replace="footer"></footer>
 	</main>
