--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -36,16 +36,22 @@
 			</div>
 			<br>
 
+			<label class="selectbox-2">
 			<select name="textbookId">
+				<option value="" disabled selected>タイトル名</option>
 				<option th:each="textbook:${TextbookMap}" th:value="${textbook.value}" th:text="${textbook.key}">
 				</option>
 			</select>
+			</label>
 
 			<br>
 
+			<label class="selectbox-2">
 			<select name="itemStatus">
+				<option value="" disabled selected>教科書の状態</option>
 				<option th:each="item:${ItemStatusMap}" th:value="${item.value}" th:text="${item.key}"></option>
 			</select>
+			</label>
 
 			<!-- 選択した画像のプレビューを表示するためのdiv要素を設定します。 -->
 			<br>
