--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -56,7 +56,7 @@
 			<!-- 選択した画像のプレビューを表示するためのdiv要素を設定します。 -->
 			<br>
 
-			<button class="addItembutton">出品申請</button>
+			<button class="addItembutton" id="submitButton" disabled>出品申請</button>
 		</form>
 
 		<script src="/js/addItem.js"></script>
