--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -10,7 +10,7 @@
 <body>
 	<header th:replace="header"></header>
 	<main>
-		<h2>[[${user.studentNumber}]]</h2>
+		<h2>[[${student.name}]]</h2>
 		<table border="1" style="width: 60%;">
 			<tr>
 				<td th:text="${user.introduce}"></td>
