--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
 	<main>
 	<form action="/home" method="get">
 		<input type="text" name="keyword" th:value="${keyword}" placeholder="キーワード検索">
-		<button>検索</button>
+		<button class="searchbtn">検索</button>
 	</form>
 	<div class="row">
 
