cssの画像サイズ変更

--- a/src/main/resources/static/css/deal.css
+++ b/src/main/resources/static/css/deal.css
@@ -51,8 +51,7 @@
 /*ドットナビゲーションの設定*/
 
 .slick-dots {
-  /*  text-align:center;*/
-  	padding-left: 150px;
+  text-align:center;
 	margin:20px 0 0 0;
 }
 
