--- a/src/main/resources/templates/textbook.html
+++ b/src/main/resources/templates/textbook.html
@@ -16,7 +16,7 @@
 				<option value="2">安い順</option>
 				<option value="3">高い順</option>
 			</select>
-			<button>並べ替え</button>
+			<button class="sortbtn">並べ替え</button>
 		</form>
 		<div class="row">
 
