自己紹介メッセージの保持

--- a/src/main/resources/templates/resetIntroduce.html
+++ b/src/main/resources/templates/resetIntroduce.html
@@ -20,7 +20,7 @@
 		<tr>
 			<th class="tabletitle">自己紹介<br>メッセージ</th>
 			<td>
-				<textarea name="introduce"></textarea>
+				<textarea name="introduce" th:text="${introduce}"></textarea>
 			</td>
 		</tr>
 	</table>
